assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');

* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

body {
    font-family: 'Roboto', sans-serif;
    color: #333;
    line-height: 1.6;

}

ul {
    list-style-type: none;
}

a {
    text-decoration: none;
    color: black;
    padding: 0;
    margin: 0;
}

h1, h2, h3, h4, h5, h6 {
    font-weight: 400;
    line-height: 1.2;
    margin: 10px 0;
}

h1 {
    font-size: 50px;
}

h2 {
    font-size: 40px;
}

h3 {
    font-size: 25px;
}

p {
    margin: 10px 0;
    font-weight: 300;
    font-size: 18px;
}

img {
    width: 100%;
}

/* navbar */

.navbar {
    color: black;
    height: 90px;
}

.navbar li {
    margin: auto;
}

.navbar a {
    padding: 36px;
    margin: 0 5px;
    color: #333;
    font-weight: 300;
    font-size: 20px;
    letter-spacing: 2px;
}

.navbar .book {
    background-color: rgb(255, 72, 0);
    color: #e3e3e3;
    box-shadow: black 0px 1px 20px 2px;
    border-bottom: 2px black solid;
    text-wrap: nowrap;
}

.navbar a:hover {
    border-bottom: 2px black solid;
    box-shadow: 0px 1px 20px 2px;
    background-image: linear-gradient(#e3e3e3 20%, #777777);
}

.navbar .flex {
    justify-content: space-between;
    align-items: stretch;
}

.navbar .logo {
    height: 100%;
    width: auto;
}

/* landing */

.landing {
    background-image: url(../media/SS-CTA.jpg);
    height: 720px;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    background-position: top;
    overflow: hidden;
}

.landing .container {
    height: 100%
}


.landing .logo  {
    height: 540px;
    width: auto;
    background-color: rgba(0,0,0,0.5);
    border-radius: 25px;
    padding: 15px;
    border: 2px white solid;
    box-shadow: 10px 10px 10px 10px black;  
    
}

/* banner */

.banner {
    width: 100%;
    text-align: center; 
    padding-bottom: 40px;   
}

.banner h1 {
    margin-top: 30px;
}

.banner h3 {
    font-size: 25px;
}

.banner p {
    margin-bottom: 20px;
}

/* reviews */

.reviews {
    background-image: url(../media/indoor-skatepark.jpg);
    height: min-content;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    background-position: top;
    overflow: hidden;
    margin-bottom: 0px;
}

.reviews .container {
    margin-top: 45px;
    padding-top: 10px;
    padding-bottom: 45px;
}

.reviews .card {
    text-align: center;
    color: white;
    width: 300px;
    min-width: 300px;
    background-color: rgba(0,0,0,0.75);

}

.reviews .card img {
    height: auto;
    width: 90px;
    border-radius: 50%;
    border: 1px white solid;
    box-shadow: black 5px 5px 5px 5px;
}

.reviews .flex {
    flex-wrap: wrap;
    gap: 40px;
    justify-content: center;
    align-items: center;
}


/* map */

.map {
    border: 0;
}

.map .banner {
    margin: 0;
}

.map h3 {
    text-align: center;
    background-color: black;
    color: white;
    margin: 0;
    padding-bottom: 0px;
}

/* schedule */

.schedule {
    text-align: center;
    background-image: url(../media/schedulebg.jpg);
    height: min-content;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    background-position: top;
    overflow: hidden;
    margin-bottom: 0px;
    color: white;
    padding: 20px;
}

.schedule .card {
    margin: 20px;
    min-width: 300px;
}

.schedule a {
    color: white;
}

/* menu */

.menu {
    text-align: center;
    background-image: url(../media/skateshackcafe.jpg);
    height: min-content;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    background-position: top;
    overflow: hidden;
    margin-bottom: 0px;
    color: white;
    padding: 20px;
}

.menu .banner {
    background-color: black;
    color: white;
}

.menu .banner h3 {
    margin: 0;
    padding: 10px;
}

.menu .container {
    justify-content: center;
    align-items: baseline;
    flex-wrap: wrap;
    gap: 20px;
    padding-bottom: 20px;
}

.menu .container .card {
    width: 300px;
    min-width: 300px;
    margin: 20px;
    color: white;
}

.menu .card img {
    height: 90px;
    width: 90px;
    object-fit: cover;
    border-radius: 50%;
    border: 1px white solid;
    box-shadow: black 5px 5px 5px 5px;
}


/* booking */

.booking {
    background-image: url(../media/ss_booking_bg.jpg);
    height: min-content;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    background-position: top;
    overflow: hidden;
    text-align: center;
    color: #e3e3e3;
}

.booking .card {
    padding: 20px;
    margin-top: 40px;
    max-width: 600px;
    min-width: 300px;
    margin-bottom: 360px;
}


/* footer */


.container footer {
    text-align: center;
    margin: 20px;
    
}

footer a {
    color: #333;
    padding: 10px;
    border-radius: 40%;
    margin: 5px;
    display: inline-block;
}

footer a:hover {
    box-shadow: 0px 5px 5px 0px;
}







/* utility */

.container {
    max-width: 1100px;
    margin: 0 auto;
    overflow: hidden;
    padding: 0 60px;
}

.flex {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
}  

.grid {
    display: grid;
    justify-content: center;
    align-items: center;
    width: 100%;
}

.btn {
    margin: 10px;
    padding: 10px;
}

.btn-primary {
    background-color: rgb(255, 72, 0);
    border: 1px #e3e3e3 solid;
    margin: 10px;
    border-radius: 15px;
    color: #e3e3e3;
    padding: 10px;
}

.gradient {
    background-image: linear-gradient(#e3e3e3 85%, #6b6b6b);
}

.card {
    background-color: rgba(0,0,0,0.75);
    border-radius: 25px;
    padding: 15px;
    border: 2px white solid;
    box-shadow: 10px 10px 10px 10px black;
}

